CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(hc_sources
	eq.cpp
	main.cpp
	login.cpp
	world.cpp
)

SET(hc_headers
	eq.h
	login.h
	world.h
)

FIND_PACKAGE(OpenSSL REQUIRED)

INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

ADD_EXECUTABLE(hc ${hc_sources} ${hc_headers})

INSTALL(TARGETS hc RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

TARGET_LINK_LIBRARIES(hc ${SERVER_LIBS} ${OPENSSL_LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
