CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(lp_sources
	main.cpp
)

SET(hc_headers
)

FIND_PACKAGE(OpenSSL REQUIRED)

INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

ADD_EXECUTABLE(lp ${lp_sources} ${lp_headers})

INSTALL(TARGETS lp RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

TARGET_LINK_LIBRARIES(lp ${SERVER_LIBS} ${OPENSSL_LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
